Documentation avec Swagger des trois entitiés
